--- a/main.ipynb
+++ b/main.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "14f0a707",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'GoogleScholarSearch' from 'serpapi' (c:\\Users\\anind\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\serpapi\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mresp\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mserp_api\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Serp\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mresp\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcnnp\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m connected_papers\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mresp\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msemantic_s\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Semantic_Scholar\n",
+      "File \u001b[1;32mc:\\users\\anind\\resp\\resp\\apis\\serp_api.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mserpapi\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GoogleScholarSearch, GoogleSearch\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'GoogleScholarSearch' from 'serpapi' (c:\\Users\\anind\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\serpapi\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "from resp.apis.serp_api import Serp\n",
     "from resp.apis.cnnp import connected_papers\n",
@@ -2863,7 +2876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
